aadded fast forward and slowmo buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         </p>
     </video>
 
-    <input type="button" id="play_button" onclick="" value="Play">
-    <input type="button" id="pause_button" onclick="" value="Pause">
+    <button id="play" type="button">Play </button>
+    <button id="pause" type="button">Pause </button><br> 
+    <button id="fast" type="button">Fast Forward</button><br> 
+    <button id="slow" type="button">Slowmow</button><br> 
+
 </body>
 </html>
